#1 FIX : AppHeader z-index is bigger than page body

--- a/frontend/src/styles/AppHeader.scss
+++ b/frontend/src/styles/AppHeader.scss
@@ -7,7 +7,7 @@
 }
 
 #AppBar {
-  z-index: 1;
+  z-index: 2;
 
   #logo {
     font-size: 25px;
